<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1a"
    tools:context=".DisplayConditionsActivity">

    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

    <TextView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_2"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

    <TextView
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_3"
        android:padding="30dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

    <TextView
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_4"
        android:padding="30dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/line3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

    <TextView
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_5"
        android:padding="30dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/line4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

    <TextView
        android:id="@+id/abhishek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="abhishek Mehta"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>